# vllm-frontend-rs

./: Cargo.toml  README.md  rustfmt.unstable.toml
.github/workflows/: ci.yml
proto/: vllm_grpc.proto
src/chat/: Cargo.toml
src/chat/benches/: frontend_scenarios.rs  qwen3_coder_tool_parser.rs
src/chat/examples/: external_engine_chat_qwen.rs
src/chat/src/: error.rs  event.rs  lib.rs  multimodal.rs  reasoning.rs  request.rs  stream.rs  template.rs
src/chat/tests/: chat.rs
src/cmd/: Cargo.toml
src/cmd/examples/: README.md
src/cmd/src/: cli.rs  logging.rs  main.rs  managed_engine.rs
src/engine-core-client/examples/: external_engine_logprobs.rs  external_engine_utility_call.rs
src/llm/: Cargo.toml
src/reasoning-parser/: Cargo.toml
src/server/: Cargo.toml
src/text/: Cargo.toml
src/tool-parser/: Cargo.toml
src/tool-parser/benches/: deepseek_v31_tool_parser.rs  deepseek_v32_tool_parser.rs  deepseek_v3_tool_parser.rs  gemma4_tool_parser.rs  glm45_moe_tool_parser.rs  kimi_k2_tool_parser.rs  llama3_json_tool_parser.rs  minimax_m2_tool_parser.rs  qwen3_coder_tool_parser.rs  qwen3_xml_tool_parser.rs
src/tool-parser/benches/utils/: mod.rs
src/tool-parser/src/: error.rs  gemma4.rs  kimi_k2.rs  lib.rs  minimax_m2.rs  parameters.rs  qwen_coder.rs  test_utils.rs  tests.rs
src/tool-parser/src/deepseek_dsml/: deepseek_v32.rs  deepseek_v4.rs  mod.rs
src/tool-parser/src/deepseek_json/: deepseek_v3.rs  deepseek_v31.rs
src/tool-parser/src/glm_xml/: glm45_moe.rs  glm47_moe.rs  mod.rs
src/tool-parser/src/json/: hermes.rs  llama.rs  mistral.rs  qwen.rs
(+154 files in other folders)
