[package]
name = "vllm-tool-parser"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-util = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
winnow.workspace = true

[dev-dependencies]
criterion.workspace = true
expect-test.workspace = true
futures.workspace = true
openai-protocol.workspace = true
thiserror-ext.workspace = true
tool-parser.workspace = true

[[bench]]
name = "deepseek_v3_tool_parser"
harness = false
required-features = ["test-util"]

[[bench]]
name = "deepseek_v31_tool_parser"
harness = false
required-features = ["test-util"]

[[bench]]
name = "deepseek_v32_tool_parser"
harness = false
required-features = ["test-util"]

[[bench]]
name = "qwen3_coder_tool_parser"
harness = false
required-features = ["test-util"]

[[bench]]
name = "qwen3_xml_tool_parser"
harness = false
required-features = ["test-util"]

[[bench]]
name = "llama3_json_tool_parser"
harness = false
required-features = ["test-util"]

[[bench]]
name = "minimax_m2_tool_parser"
harness = false
required-features = ["test-util"]

[[bench]]
name = "glm45_moe_tool_parser"
harness = false
required-features = ["test-util"]

[[bench]]
name = "kimi_k2_tool_parser"
harness = false
required-features = ["test-util"]

[[bench]]
name = "gemma4_tool_parser"
harness = false
required-features = ["test-util"]

[lints]
workspace = true
